Add support for Java 11 and 17 simultaneously using multi-release JAR (#214)
Fixes #212

Co-authored-by: Artur Havliukovskyi <agavlyukovskiy@gmail.com>